CKAD/compute-resource.yml
apiVersion: v1
kind: Pod
metadata:
  name: resources-pod
  namespace: resources-test
spec:
  containers:
  - name: busybox
    image: busybox:stable
    command: ['sh','-c','while true; do echo Running .. ; sleep 5; done']
    resources:
      requests:
        memeory: 64Mi
        cpu: 250m
      limits:
        memory: 128Mi
        cpu: 500m
