CKAD/configmap-pod.yml

apiVersion: v1
kind: Pod
metadata:
    labels:
        run: time-check
    name: time-check
    namespace: dbv181
spec:
    volumes:
    - name: log-volume
      emptyDir: {}
    containers:
    - image: busybox
      name: time-check
      volumeMounts:
      - mountPath: /opt/time
        name: log-volume
      command:
      - "/bin/sh"
      - "c"
      - "while true; do date; sleep $TIME_FREQ;done > /opt/time/time-check.log"
