CKAD/configmap-secrets.yml
apiVersion: v1
kind: Pod
metdata:
  name: cm-pod
spec:
    restartPolicy: Never
    containers:
    - name: busybox
      image: busybox:stable
      command: ['sh','-c','echo $MESSAGE; cat /config/app.cfg']
    volumes:
    - name: config
      configMap:
        name: my-configmap
        items:
        - key: app.cfg
          path: app.cfg

---
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
spec:
  restartPolicy: Never
  containers:
  - name: busybox
    image: busybox:stable
    command: ['sh', '-c','echo $SENSITIVE_STUFF; cat /config/passwords.txt']
    volumeMounts:
    - name: secret-config
      mountPath: /config
      readOnly: true
  volumes:
  - name: secret-config
    secret:
      secretName: my-secret
      items:
      - key: passwords.txt
        path: passwords.txt
