CKAD/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
      app: nginx-deploy
    name: nginx-deploy
    namespace: default
spec:
    replicas: 4
    selector:
      matchLabels:
        app: nginx-deploy
    startegy:
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 2
        type: RollingUpdate
    template:
      metadata:
          labels:
              app: nginx-deploy
      spec:
          contaienrs:
          - image: nginx:1.16
            imagePullPolicy: IfNotPresent
            name: nginx
