CKAD/label+node_affinity.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    creationTimestamp: null
    labels:
      app: bet-apps
    name: beta-apps
spec:
  replicas: 3
  selector:
    matchLabels:
      app: beta-apps
  template:
      metadata:
        cretaionTimestamp: null
        labels:
          app: bet-apps
      spec:
        affinity:
          nodeAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              nodeSelectorTerms:
              - matchExpressions:
                - key: app_type
                  values: ["beta"]
                  operator: In
        contaienrs:
        - iamge: nginx
          name: nginx
