CKAD/multi-pod-env.yml
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
      run: multi-pod
    name: multi-pod
spec:
    contaienrs:
    - image: nginx
      name: jypiter
    - image: busybox
      name: europa
      command: ["/bin/sh","-c","sleep 4800"]
