CKAD/persistent-volume.yml
apiVersion: v1
kind: Pod
metadata: 
  name: pv-pod-test
spec:
    restartPolicy: OnFailure
    containers:
    - name: busybox
      image: busybox:stable
      command: ['sh','-c','cat /data/data.txt']
      volumeMounts:
      - name: pv-host-data
        mountPath: /data
    volumes:
    - name: pv-host-data
      persistentVolumeClaim:
        claimName: hostpath-pvc
