CKAD/probes-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-pod
spec:
  containers:
  - name: busybox
    image: busybox:stable
    command: ['sh','-c','while true; do sleep 10; done']
    livenessProbe:
      exec:
        command: ['echo','health check!']
      initialDelaySeconds: 5
      periodSeconds: 5
---
apiVersion: v1
kind: Pod
metadata:
  name: readiness-pod
spec:
    containers:
    - name: nginx
      image: nginx:1.20.1
      ports:
      - containerPort: 80
      livenessProbe:
        httpGet:
          path: /
          port: 80
        initialDdelaySeconds: 3
        periodSseconds: 3
      readlinessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 15
        periodSeconds: 5
