CKAD/pv-pvc-pod.yml

apiVersion: v1
kind: Pod
metadata:
    labels:
      run: logger
    name: logger
spec:
    containers:
    - image: nginx:alpine
      name: logger
      volumeMounts:
        - name: log
          mountPath: /var/www/nginx
    volumes:
    - name: log
      persistentVolumeClaim:
          claimName: log-claim
