CKAD/readiness-liveness-probe.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx1410
  namespace: dev176
spec:
  containers:
  - image: kodekloud/nginx
    imagePullPolicy: IfNotPresent
    name: nginx
    ports:
    - containerPort: 9080
      protocol: TCP
    readinessProbe:
      httpGet:
        path: /
        port: 9080
    livenessProbe:
      exec:
        command:
          - ls
          - /var/www/html/file_check
      initialDelaySeconds: 10
      periodSeconds: 60
