CKAD/security-context-pod.yml
apiVersion: v1
kind: Pod
metadata:
    name: app-sec-kff3656
    namespace: default
spec:
    securityContext:
      runAsUser: 0
    containers:
    - command:
      - sleep
      - "4800"
      image: ubuntu
      name: ubuntu
      securityContext:
        capabilities:
          add: ["SYS_TIME"]
