CKAD/security-context.yml
apiVersion: v1
kind: Pod
metadata:
  name: securitycontext-pod
spec:
    containers:
    - name: busybox
      image: busybox:stable
      command: ['sh','-c','while true; do echo Running...; sleep 5; done']
      securityContext:
        runAsUser: 3000
        runAsGroup: 4000
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
