CKAD/tolerations.yml
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
      run: alpha
    name: alpha
spec:
    tolerations:
    - effect: NoSchedule
      key: app_type
      value: alpha
    containers:
    - image: redis
      name: alpha
    dnsPolicy: ClusterFirst
    restartPolicy: Always
