CKAD/use-secrets.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: my-busybox
  name: my-busybox
  namespace: dev2457
spec:
  volumes:
    - name: secret-volume
      secret:
        secretName: dotfile-secret
  nodeSelector:
    kubernetes.io/hostname: controlplane
  tolerations:
    - key: "node-role.kubernetes.io/control-plane"
      operator: "Exists"
      effect: "NoSchedule"
  containers:
  - command:
   - sleep
   args:
   - "3600"
   image: busybox
   name: secret
   volumeMounts:
   - name: secret-volume
     readOnly: true
     mountPath: "/etc/secret-volume"
