CKAD/volume-test.yml
apiVersion: v1
kind: Pod
metadata:
    name: hostpath-volume-test
spec:
    restartPolicy: OnFailure
    containers:
    - name: busybox
      image: busybox:stable
      command: ['sh','-c','cat /data/data.txt']
      volumeMounts:
      - name: host-data
        mountPath: /data
    volumes:
    - name: host-data
      hostPath:
        path: /etc/hostPath
        type: Directory
---
apiVersion: v1
kind: Pod
metadata:
  name: emptydir-volume-test
spec:
    restartPolicy: OnFailure
    containers:
    - name: busybox
      image: busybox:stable
      command: ['sh', '-c','echo "writing to the empty dir .." > /data/data.txt; cat /data/data.txt']
      volumeMounts:
      - name: emptydir-vol
        mountPath: /data
    volumes:
    - name: emptydir-vol
      emptyDir: {}
