CKAD/service.yml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service
spec:
  type: cluserIP
  selector:
    app: service-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: NodePort
spec:
  type: NodePort
  selector:
    app: service-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30080
