CKAD/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: secure-pod
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matcLabels:
          name: webapp-color
    ports:
    - protocol: TCP
      port: 80

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-access
  namespace: default
spec:
    podSelector:
      matchLabels:
        app: redis
    policyTypes:
    - Ingress
    ingress:
    - from:
        - podSelector:
          matchLabels:
            access: redis
      ports:
        - protocol: TCP
          port: 6379
